--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,16 @@
-# Copy file này thành .env và thay YOUR_KEY bằng OpenAI API key thật
-OPENAI_API_KEY=YOUR_KEY_HERE
+# ===============================
+# Tham AI Backend - Environment Variables
+# ===============================
+
+# Flask settings
+FLASK_ENV=development
+PORT=5000
+
+# OpenAI API key (bắt buộc: chọn 1 trong 2 loại key)
+# - Nếu dùng key cũ: bắt đầu bằng sk-...
+# - Nếu dùng key mới: bắt đầu bằng sk-proj-...
+OPENAI_API_KEY=sk-your-key-here
+
+# Tùy chọn: nếu backend deploy trên Render/Heroku có thể set thêm:
+# Host = 0.0.0.0 để lắng nghe toàn bộ địa chỉ
+HOST=0.0.0.0
